# workspace

./: .deploy-mode  .gitignore  .memory-optimizer-state.json  AGENTS.md  AGENTS_CONFIG.md  AGENT_NAVIGATOR.md  AGENT_PRISM.md  AGENT_ROUTER_PLAN.md  AGENT_WORKFLOWS.md  ALIGNMENT_VERIFICATION.md  CONFIGURATION.md  CONTROL_CENTER_GUIDE.md  DATA_COLLECTION_REPORT.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-READY.md  DEPLOYMENT_COMPLETE.md  DOCUMENTATION_UPDATE_LOG.md  ERROR-LOG-REVIEW-2026-04-04.md  EXPLORATION_THREADS.md  HARDWARE_STATUS.md  HARDWARE_TEST_GUIDE.md  HEARTBEAT.md  HOUSEKEEPING-REPORT-2026-04-03.md  IDENTITY.md  IMMEDIATE-PRIORITIES.md  INFRASTRUCTURE.md  KB-MIGRATION-COMPLETE.md  KB-MIGRATION-FINAL-SUMMARY.md  KB-SQLITE-MIGRATION-PLAN.md  KB-SQLITE-VERIFICATION.md  KB_ARDUINO_SETUP.md  LEARNING_QUICK_REF.md  LOCAL_EMBEDDINGS_SETUP.md  MCP_DEPLOYMENT_SUMMARY.md  MCP_SETUP.md  MEMORIES_GUIDE.md  MEMORY.md  MISSION_CONTROL.md  MISSION_CONTROL_OVERVIEW.md  MISTRAL-USAGE-GUIDE.md  (+70 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
.q-learning-backups/: rl-agent-selection-20260307-200621.json
agents/: AGENTS.md  PROCESS_FLOWS.md
archive/: ACTIVATE-REAL-TIME-OPTIMIZER.md  AUTOMATION_STATUS.md  HARDWARE_SPECS.md  LIBRARY_MANIFEST.md  MEMORY-INTEGRATION.js  import-memories.js  notion_sync_state.json  (+4 more)
hardware/morpheus-api/: Cargo.toml  morpheus-server.jl
hardware/morpheus-api/src/: main.rs
optimization/rust-indexer/: Cargo.toml
optimization/rust-indexer/src/: main.rs
skills/monte-carlo-sim/rust/: Cargo.toml
skills/monte-carlo-sim/rust/src/: main.rs
(+525 files in other folders)
