[package]
name = "morpheus-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "morpheus-api"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
