[package]
name = "mc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "mc-rust"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
